# audience_planner

./: .env.example  .gitignore  README.md  pyproject.toml  segments.json  segments2.json
knowledge/: segment_knowledge_source.py  segments.duckdb
knowledge/Acxiom-Real-Identity/: Core-Audience---Emerging.json  Core-Audience---High-Confidence.json  Core-Audience---Validated.json  Core-Group---High-Confidence.json  Core-Group---Validated.json  Core-Segment---Emerging.json  Core-Segment---High-Confidence.json  Core-Users---Emerging.json  Core-Users---High-Confidence.json  Core-Users---Validated.json  Mid-Career-Middle-Class-Mainstream-Automotive-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Education-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Entertainment-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Fashion-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Finance-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Food-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Health-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Sports-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Tech-Enthusiasts.json  Mid-Career-Middle-Class-Mainstream-Travel-Enthusiasts.json  Mid-Career-Upper-Middle-Mainstream-Automotive-Enthusiasts.json  Mid-Career-Upper-Middle-Mainstream-Education-Enthusiasts.json  Mid-Career-Upper-Middle-Mainstream-Entertainment-Enthusiasts.json  Mid-Career-Upper-Middle-Mainstream-Fashion-Enthusiasts.json  Mid-Career-Upper-Middle-Mainstream-Finance-Enthusiasts.json  (+76 more)
streamlit/: agent_runner.py  streamlit_app.py
(+7 files in other folders)
