[project]
name = "audience_planner2"
version = "0.1.0"
description = "audience_planner2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
audience_planner2 = "audience_planner2.main:run"
run_crew = "audience_planner2.main:run"
train = "audience_planner2.main:train"
replay = "audience_planner2.main:replay"
test = "audience_planner2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
